clusters/core-services/kong-ingress-controller/client-test/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress-walt-test
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: "apikey-auth"  # Ensure this plugin is properly configured
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix  # Use Prefix to match any sub-path under '/'
        backend:
          service:
            name: walt-test-go-phylax
            port:
              number: 8000
